--- a/portfolio.html
+++ b/portfolio.html
@@ -68,10 +68,12 @@
     <body>
        <div id="all-contents">
         <nav>
-<ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-    </ul>
+             <header> Isaac's Website</header>
+                
+            <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
         </nav>
 
         <main>
