--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -16,6 +16,10 @@
 			top: 100px;
 			left: 200px;  /* <--- Change me! */
 		}
+		
+		body { background-image: url("isaac01.jpg")
+		
+		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
@@ -23,7 +27,10 @@
 <body class="board">
 	<!-- HTML for the box -->
 	<div class="box">?</div>
-
+	
+	
+	
+	
 	<script>
 		(function(){
 			'use strict'
