--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -43,7 +43,7 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
-
+			var boardHeight = jQuery(window).height(); 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
 			
@@ -51,9 +51,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
-		
+				box.css('top', newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -70,7 +70,8 @@
 			var points = 0;
 			var speed = 10;
 
-			
+			var positionY = 0;
+			var speedY = 10;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
@@ -78,17 +79,25 @@
 			*/
 			function update() {
 			positionX =	positionX + speed;
-				moveBoxTo(positionX);
+			positionY = positionY + speedY;
+				moveBoxTo(positionX, positionY);
 			
 				if (positionX > boardWidth){
 					speed = -speed;
 				}
 				
-					if (positionX < 0){
+				if (positionX < 0){
 					speed = -speed;
 				}
 
-			
+				if (positionY > boardHeight){
+					speedY = -speedY;
+				}
+				
+				if (positionY < 0){
+					speedY = -speedY;
+				}
+
 };
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -101,7 +110,8 @@
 				speed = speed + 3;
 				changeBoxText(points);
 
-
+						positionY = 0;
+					speedY = speedY + 3;	
 			};
 		})();
 	</script>
